--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
   <link rel="stylesheet" href="style.css">
 
   <title>Frontend Mentor | 3-column preview card component</title>
@@ -17,7 +17,7 @@
   <main>
     <div class="container">
       <div class="block1">
-        <img src="images/icon-sedans.svg" alt="">
+        <img src="icon-sedans.svg" alt="">
         <p id="title">Sedans</p>
         <p>
           Choose a sedan for its <br>affordability and excellent<br> fuel economy. Ideal for<br> cruising in the city
@@ -25,7 +25,7 @@
         <a id="more" href="#">Learn More</a>
       </div>
       <div class="block2">
-        <img src="images/icon-suvs.svg" alt="">
+        <img src="icon-suvs.svg" alt="">
         <p id="title">SUVS</p>
         <p>
           Take an SUV for its spacious<br> interior, power, and<br> versatility. Perfect for your<br> next family
@@ -35,7 +35,7 @@
         <a id="more" href="#">Learn More</a>
       </div>
       <div class="block3">
-        <img src="images/icon-luxury.svg" alt="">
+        <img src="icon-luxury.svg" alt="">
         <p id="title">Luxury</p>
         <p>
           Cruise in the best car brands<br> without the bloated prices.<br> Enjoy the enhanced comfort<br> of a luxury
